Fixed wrapping not working when displaying lists (fix to comma)

--- a/mathquill.css
+++ b/mathquill.css
@@ -256,6 +256,10 @@
   padding: 0 .2em;
   display: inline-block; /* Allows word-wrap to occur around operators */
 }
+.mathquill-rendered-math .comma {
+  padding: 0 0.15em 0 0.1em; /* Tighten up char kerning display of lists */
+  display: inline-block; /* Allows word-wrap to occur around operators */
+}
 .mathquill-rendered-math .unary-operator {
   padding-left: .2em;
 }
